--- a/src/components/Header.module.scss
+++ b/src/components/Header.module.scss
@@ -23,3 +23,16 @@
   color: $color-black;
   border-bottom: 0.1vw solid black;
 }
+
+// ----- Header(Logo + Navbar) 스타일
+.header {
+  @include m.flex-row-center;
+  justify-content: space-around;
+  background-color: transparent; // 투명 배경
+  position: fixed; // 위치 고정
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 4.17vw;
+  z-index: 1000;
+}
