--- a/src/components/header/Header.module.scss
+++ b/src/components/header/Header.module.scss
@@ -1,5 +1,5 @@
-@use "../styles//mixins" as m;
-@use "../styles/variables" as *;
+@use "../../styles//mixins" as m;
+@use "../../styles/variables" as *;
 
 // ----- Navbar 스타일
 .navbar {
