--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,6 +4,8 @@ $background-color: #ffffff; // 변경될수도
 $color-black: #111111;
 $color-white: #ffffff;
 
+$translucent: #ffffff80;
+
 $main-color1: #0400fa;
 
 $gray-300: #c4c4c4;
