--- a/src/pages/styles/IntroPage.module.scss
+++ b/src/pages/styles/IntroPage.module.scss
@@ -16,6 +16,7 @@
 .boxContainer1 {
   @include m.flex-column-center;
   gap: 0.63vw;
+  margin-top: 5.21vw;
 }
 
 .boxContainer2 {
@@ -23,4 +24,5 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 0.63vw;
+  margin-top: 3.13vw;
 }
