💄 : TitleContainer text 색상 변경

--- a/src/components/styles/TitleContainer.module.scss
+++ b/src/components/styles/TitleContainer.module.scss
@@ -23,7 +23,7 @@
   .titleText {
     font-size: 1.25vw;
     font-weight: 600;
-    color: $gray-500;
+    color: #9d9d9ded;
     line-height: 140%;
     white-space: pre-line; // \n 기준 줄바꿈
   }
