--- a/src/components/styles/EmailPwBox.module.scss
+++ b/src/components/styles/EmailPwBox.module.scss
@@ -11,10 +11,11 @@
   justify-content: center;
   padding: 0.73vw 1.09vw;
   gap: 0.63vw;
-  backdrop-filter: blur(20px);
-  -webkit-backdrop-filter: blur(20px);
-  box-shadow: inset 2px 2px 2px -2px $color-white,
-    inset -2px -2px 2px -2px $color-white, 0px 8px 12px rgba(4, 0, 250, 0.06);
+  backdrop-filter: blur(1.04vw);
+  -webkit-backdrop-filter: blur(1.04vw);
+  box-shadow: inset 0.1vw 0.1vw 0.1vw -0.1vw $color-white,
+    inset -0.1vw -0.1vw 0.1vw -0.1vw $color-white,
+    0vw 0.42vw 0.63vw rgba(4, 0, 250, 0.06);
   overflow: hidden;
 
   section {
