--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,15 @@
   font-size: 16px;
 }
 
+/* 스크롤바 */
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-thumb {
+  background-color: $gray-500;
+  border-radius: 100px;
+}
+
 * {
   box-sizing: border-box;
 }
