--- a/src/pages/styles/ReportPage.module.scss
+++ b/src/pages/styles/ReportPage.module.scss
@@ -14,15 +14,13 @@
   .reportContainer {
     margin-top: 2.6vw;
     padding: 1.93vw 3.75vw;
-    background-color: $translucent;
     width: 71.35vw;
     height: 115.16vw;
     border-radius: 1.04vw;
-    backdrop-filter: blur(0.26vw);
-    box-shadow: inset 0.31vw 0.31vw 0.16vw -0.1vw $color-white,
-      inset -0.21vw -0.21vw 0.21vw -0.1vw $color-white,
-      0vw 0.42vw 0.63vw rgba(4, 0, 250, 0.06);
-    overflow: hidden;
+    @include m.glass-box(
+      inset 0.31vw 0.31vw 0.16vw -0.1vw $color-white,
+      inset -0.21vw -0.21vw 0.21vw -0.1vw $color-white
+    );
   }
 
   .titleContainer {
