✨ : 추천창업계획 라벨 RecommendPlanLabel

--- a/src/pages/reportPage/components/Report.module.scss
+++ b/src/pages/reportPage/components/Report.module.scss
@@ -20,3 +20,12 @@
     inset -0.1vw -0.1vw 0.1vw -0.1vw $color-white
   );
 }
+
+.label {
+  @include m.flex-row-double-center;
+  border-radius: 0.52vw !important;
+  @include m.glass-box(
+    inset 0.21vw 0.21vw 0.1vw -0.1vw $color-white,
+    inset -0.1vw -0.1vw 0.1vw -0.1vw $color-white
+  );
+}
