--- a/src/pages/reportPage/components/Report.module.scss
+++ b/src/pages/reportPage/components/Report.module.scss
@@ -29,3 +29,65 @@
     inset -0.1vw -0.1vw 0.1vw -0.1vw $color-white
   );
 }
+
+// 추천 창업 계획
+.planContainer {
+  display: grid;
+  grid-template-columns: 1.1vw 56.92vw;
+  grid-template-rows: 21.2vw 1.25vw 1.2vw;
+  column-gap: 1.09vw;
+  width: 59.48vw;
+  height: 23.65vw;
+
+  .planY {
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    padding-right: 0.4vw;
+
+    font-size: 0.73vw;
+    font-weight: 400;
+    color: $main-color1;
+  }
+
+  .rightSection {
+    grid-column: 2 / 3;
+    grid-row: 1 / 4;
+
+    display: grid;
+    grid-template-rows: 21.2vw 1.2vw;
+    row-gap: 1.25vw;
+
+    .planImg {
+      grid-row: 1 / 2;
+
+      width: 100%;
+      height: 100%;
+
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+        display: block;
+      }
+    }
+
+    .planX {
+      grid-row: 2 / 3;
+      width: 100%;
+      height: 100%;
+      font-size: 0.73vw;
+      font-weight: 500;
+      color: $main-color1;
+
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 0 0.4vw;
+    }
+  }
+}
