--- a/src/pages/styles/ReportPage.module.scss
+++ b/src/pages/styles/ReportPage.module.scss
@@ -95,18 +95,24 @@
     }
 
     // ---- 추천 창업 계획
+    .recommendBox {
+      @include m.flex-column-center;
+      gap: 0.63vw;
+    }
     .planText {
+      width: 59.9vw;
       font-size: 1.04vw;
       font-weight: 600;
       color: $gray-800;
     }
 
     .planLabel {
-      width: 100%;
+      width: 59.9vw;
       display: flex;
       flex-wrap: wrap;
       row-gap: 0.63vw;
       column-gap: 0.42vw;
+      margin-bottom: 0.63vw;
 
       p {
         font-size: 0.73vw;
