--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -7,6 +7,7 @@ $color-white: #ffffff;
 $translucent: #ffffff80;
 
 $main-color1: #0400fa;
+$main-color2: #8ebefa;
 
 $gray-300: #c4c4c4;
 $gray-500: #767676;
