--- a/src/pages/reportPage/components/Report.module.scss
+++ b/src/pages/reportPage/components/Report.module.scss
@@ -30,6 +30,45 @@
   );
 }
 
+// 뉴스기사 2개
+.newsItem {
+  width: 20.91vw;
+  height: 5.21vw;
+  display: flex;
+  flex-direction: column;
+  gap: 0.42vw;
+  margin-top: 0.78vw;
+
+  .headerRow {
+    @include m.flex-row-center;
+    gap: 0.42vw;
+
+    .title {
+      font-size: 1.04vw;
+      font-weight: 500;
+      color: $gray-800;
+      margin: 0;
+
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
+  }
+
+  .link {
+    width: 100%;
+    height: 2.66vw;
+    line-height: 0.82vw;
+    font-size: 0.63vw;
+    font-weight: 500;
+    color: $gray-500;
+    text-decoration: none;
+    overflow: hidden;
+    white-space: normal;
+    word-break: break-word;
+  }
+}
+
 // 추천 창업 계획
 .planWrapper {
   @include m.flex-column-center;
