--- a/src/pages/reportPage/components/Report.module.scss
+++ b/src/pages/reportPage/components/Report.module.scss
@@ -38,11 +38,7 @@
   padding: 1.04vw;
   gap: 0.21vw;
   cursor: pointer;
-  transition: transform 0.2s ease;
-
-  &:hover {
-    transform: scale(1.01);
-  }
+  @include m.button-click(1.01, 0.99);
 
   .businessTitle {
     font-size: 0.83vw;
@@ -97,6 +93,10 @@
     overflow: hidden;
     white-space: normal;
     word-break: break-word;
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 }
 
@@ -148,6 +148,8 @@
           height: 100%;
           object-fit: contain;
           display: block;
+          clip-path: inset(0 100% 0 0);
+          animation: liner 2s ease-out forwards;
         }
       }
 
@@ -240,5 +242,11 @@
   ol {
     margin: 0.75em 0;
     padding-left: 1.25rem;
+  }
+}
+
+@keyframes liner {
+  to {
+    clip-path: inset(0 0 0 0);
   }
 }
