✨ : 레포트 pdf 다운로드 기능

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -77,3 +77,14 @@ section {
   border: 0;
   padding: 0;
 }
+
+@media print {
+  @page {
+    size: A4 portrait;
+    margin: 0mm;
+  }
+  body {
+    -webkit-print-color-adjust: exact;
+    print-color-adjust: exact;
+  }
+}
