--- a/src/pages/styles/ReportPage.module.scss
+++ b/src/pages/styles/ReportPage.module.scss
@@ -164,28 +164,52 @@
     .swotBox {
       width: 63.65vw;
       height: 21.61vw;
-      background-image: url("../../assets/images/swot-box.png");
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-
       display: grid;
       grid-template-columns: repeat(2, 1fr);
       grid-template-rows: repeat(2, 1fr);
-      row-gap: 5.33vw;
-      column-gap: 0;
-      padding: 5.8vw 0 0 9.5vw;
+
+      //padding: 5.8vw 0 0 9.5vw;
 
       .swot {
-        width: 18.49vw;
-        height: 3.44vw;
+        width: 31.25vw;
+        height: 11.47vw;
         @include m.flex-row-double-center;
         text-align: center;
         overflow: hidden;
-
         font-size: 0.83vw;
         font-weight: 500;
         color: $gray-500;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        animation: doorSwing 2s 1;
+
+        p {
+          width: 18.49vw;
+          height: 3.44vw;
+          text-align: center;
+        }
+      }
+
+      .s {
+        background-image: url("../../assets/images/swot-s.png");
+        padding-left: 5.6vw;
+        padding-top: 4vw;
+      }
+      .w {
+        background-image: url("../../assets/images/swot-w.png");
+        padding-right: 5.6vw;
+        padding-top: 4vw;
+      }
+      .o {
+        background-image: url("../../assets/images/swot-o.png");
+        padding-left: 5.6vw;
+        padding-top: 1.5vw;
+      }
+      .t {
+        background-image: url("../../assets/images/swot-t.png");
+        padding-right: 5.6vw;
+        padding-top: 1.5vw;
       }
     }
 
@@ -220,4 +244,28 @@
   font-size: 1.04vw;
   font-weight: 600;
   color: $gray-800;
+}
+
+@keyframes doorSwing {
+  0% {
+    transform: rotateY(0deg);
+  }
+  15% {
+    transform: rotateY(-10deg);
+  }
+  30% {
+    transform: rotateY(6deg);
+  }
+  45% {
+    transform: rotateY(-4deg);
+  }
+  60% {
+    transform: rotateY(2deg);
+  }
+  75% {
+    transform: rotateY(-1deg);
+  }
+  100% {
+    transform: rotateY(0deg);
+  }
 }
