--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,11 +9,11 @@
 
 /* 스크롤바 */
 ::-webkit-scrollbar {
-  width: 10px;
+  width: 0.52vw;
 }
 ::-webkit-scrollbar-thumb {
   background-color: $gray-500;
-  border-radius: 100px;
+  border-radius: 5.21vw;
 }
 
 * {
