✨ : BusinessPage UI 완성

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -10,6 +10,7 @@ $main-color1: #0400fa;
 $main-color2: #8ebefa;
 
 $gray-300: #c4c4c4;
+$gray-400: #9d9d9d;
 $gray-500: #767676;
 $gray-700: #505050;
 $gray-800: #262626;
