--- a/src/pages/styles/BusinessPage.module.scss
+++ b/src/pages/styles/BusinessPage.module.scss
@@ -9,9 +9,16 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
-
   width: 100%;
+
+  .backButton {
+    width: 2.81vw;
+    height: 1.72vw;
+    margin-top: 6.51vw;
+    margin-left: 2.19vw;
+  }
 }
+
 .businessContainer {
   @include m.flex-column-center;
   align-items: flex-start;
@@ -55,6 +62,15 @@
       display: flex;
       flex-direction: column;
       gap: 1.25vw;
+
+      .noDataMessage {
+        @include m.flex-column-center;
+        gap: 1.04vw;
+        margin-top: 8vw;
+        font-size: 1.46vw;
+        font-weight: 600;
+        color: $main-color2;
+      }
     }
   }
 }
